 Cumulative changes since last tarball.
 For even more detail, use "svn log" and "svn diff".

8.0.6 (api:86/proto:86)
--------
 * Fixed DRBD to not deadlock while doing bitmap updates on Linux
   2.6.22 and later.
 * Make it compile on Linux-2.6.22 and later.
 * Removed a hardcoded path to docbook DTDs from our sgml files,
   maybe improving the situation with building the documentation.
 * drbdmeta can now also initialize meta data on meta devices
   smaller than 128MB.
 * Added an explicit NULL argument to our ioctl() calls in drbdmeta.
 * Added scripts/block-drbd, which is a nice way hand over DRBD
   role assignment to Xen, allowing one to do Xen live migrations
   in a sane way.
 * Added an option to drbd.conf which instructs the init script
   to promote DRBD devices to primary role upon machine start up.

8.0.5 (api:86/proto:86)
--------
 * Changed the default behaviour of the init script. Now the init
   script terminates in case the devices refuse to because they 
   had a split brain. Introduced an option to preserve the old
   behaviour.
 * Fixed a bug where the local_cnt could get imbalanced upon a 
   state change.
 * Fixed an bug in the UUID algorithm, that could lead to both
   sides in cs:WFBitMapT state. It was triggered when the disk
   on the SyncTarget gets detached and attached.
 * Implemented proper size checking on strings that get communicated
   with DRBD's netlink protocol.
 * Changed the maximal length of device names from 32 characters to
   128 characters. (udev based disk names might be very long nowadays)
 * Fixed the after-sb-0pri policies discard-younger/discard-older
 * When the resync speed was changed to a considerably lower 
   value while resync was running, it could happen that we erronously
   decremented the local_cnt too often.
 * Fixed a bug in the UUID code, that caused drbd to erronously report 
   a split brain after changing the role of a diskless node multiple 
   times.